# cassowary

./: Cargo.toml  README.md
.cargo/: config.toml
core/: Cargo.toml
core/src/: db.rs  lib.rs  logging.rs
core/src/api/: mod.rs
core/src/api/part/: comm.rs  part.rs
examples/: Cargo.toml  client.rs  server.rs
plugins/common/: Cargo.toml
plugins/common/src/: interface.rs  lib.rs  message.rs
plugins/hs-uuid/: Cargo.toml
plugins/hs-uuid/src/: lib.rs  main.rs
plugins/runtime/: Cargo.toml
plugins/runtime/src/: client.rs  connection.rs  lib.rs  server.rs
plugins/sap/: Cargo.toml
plugins/sap/src/: lib.rs
plugins/sap/src/api/: movement.rs  mtr.rs  plant.rs  wbs.rs
src/: db.rs  lib.rs  logging.rs  main.rs
src/api/: grade.rs  jobship.rs  mod.rs
src/api/part/: material.rs  mod.rs  part.rs
src/api/sap/: material.rs  mod.rs  movement.rs  mtr.rs  plant.rs  wbs.rs
src/flows/: material.rs  mod.rs  movement.rs
