[package]
name = "cassowary"
description = "Inventory controller"
authors = [ "Patrick Miller" ]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paddymills/cassowary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
serde = { version = "1.0.173", features = ["derive"] }
surrealdb = { version = "1.0.0-beta.9+20230402", features = ["protocol-http"] }
tokio = { version = "1.29.1", features = ["macros", "net", "rt-multi-thread", "sync"] }
toml = "0.7.6"

# logging
log = "0.4.19"
simplelog = "0.12.1"
clap-verbosity-flag = "2.0.1"
chrono = "0.4.26"
