[workspace]
members = [
    "core",
    "bin",
    "plugins/sap",
    "plugins/runtime",
    "plugins/common",
    "plugins/hs-uuid",

    "examples"
]
# default-members = [ "core" ]
resolver = "2"

[workspace.package]
authors = [ "Patrick Miller" ]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paddymills/cassowary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
cassowary-core = { path = "core", version = "*" }
regex = "1.9.1"
serde = { version = "1.0.173", features = ["derive"] }
tokio = "1.29.1"

# logging
log = "0.4.19"
simplelog = "0.12.1"

# plugin system
cassowary-plugin-common = { path = "plugins/common" }

[workspace.dev-dependencies]
regex = { version = "1.9.1", features = ["logging"] }
