[package]
name = "cassowary-core"
description = "Inventory controller core library"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
regex.workspace = true
serde.workspace = true
surrealdb = { version = "1.0.0-beta9", features = ["protocol-http"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync"] }
toml = "0.7.6"

# logging
log.workspace = true
simplelog.workspace = true

[dev-dependencies]
regex = { version = "1.9.1", features = ["logging"] }
