[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
cassowary-plugin-runtime = { path = "../plugins/runtime", version = "0.1.0" }
bincode = "1.3.3"
bytes = "1.4"
futures = "0.3"
tokio = { version = "1.31", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
rand = "0.8"

[[example]]
name = "client"
path = "client.rs"

[[example]]
name = "server"
path = "server.rs"
