[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
cassowary-plugin-runtime = { path = "../plugins/runtime", version = "0.1.0" }
cassowary-plugin-common = { path = "../plugins/common", version = "0.1.0" }
bincode = "1.3.3"
tokio = { version = "1.31", features = ["full", "tracing"] }

[[example]]
name = "client"
path = "client.rs"

[[example]]
name = "server"
path = "server.rs"
