[package]
name = "cassowary-plugin-common"
description = "Cassowary plugin interface"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
