[package]
name = "cassowary-plugin-runtime"
description = "Cassowary plugin runtime"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = "1.4"
futures = "0.3"
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
rand = "0.8"
